# Functional-programming

Practice /: Practice 1.hs  practice-1.md
Project/: Ann.txt  Bert.txt  UiCommon.hs  battleship.hs
battleship/: LICENSE  README.md  package.yaml
battleship/app/: Main.hs
battleship/app/client/: Main.hs
battleship/app/server/: Main.hs
battleship/common/: SocketUtils.hs
battleship/server/: Main.hs
battleship/src/: GameParams.hs  Lib.hs
battleship/test/: input1
fp-homework/: README.md  Usefull definitions.hs  stack.yaml
fp-homework/hw0/: ChangeLog.md  LICENSE  README.md  hw0.cabal
fp-homework/hw0/src/: Main.hs  Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
fp-homework/hw1/: README.md  hw1.cabal
fp-homework/hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs
fp-homework/hw2/: LICENSE  README.md  hw2.cabal
fp-homework/hw2/src/: Block1.hs  Block2.hs  Block2_1.hs  Block2_2.hs  Block2_3.hs  Block3.hs
fp-homework/hw2/test/: Block1_test.hs  Block2_test.hs  Block3_test.hs  Spec.hs
fp-homework/hw3/: README.md  hw3.cabal
fp-homework/hw3/src/: ExprReader.hs  ExprState.hs  IOOp.hs  Lang.hs  MyParser.hs  Parser.hs
fp-homework/hw4/: README.md  hw4.cabal
fp-homework/hw4/app/: Main.hs
fp-homework/hw4/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs
