name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/tina80lvl/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Valentina Smirnova
maintainer:          tinanight98@gmail.com
copyright:           2019 Valentina Smirnova

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib Block1 Block2 Block3 Block4 Block5
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  build-depends:       random
  default-language:    Haskell2010
